--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+.DS_Store
+*.config
+.env
+
 # User-specific files
 *.rsuser
 *.suo
